# uts-ftkt

./: .gitignore  README.md  crud.py  custom_cipher.py  gen_ticket.py  main.py  mitm_dec.py  pyproject.toml  requirements.txt  ticket.json  ticket2.json  transactions_response.json
